# maplab_ws

./: README.md  ros_install.sh
src/maplab/algorithms/loopclosure/descriptor-projection/: CMakeLists.txt
src/maplab/algorithms/loopclosure/loop-closure-handler/: CMakeLists.txt
src/maplab/algorithms/loopclosure/matching-based-loopclosure/: CMakeLists.txt
src/maplab/algorithms/loopclosure/vocabulary-tree/: CMakeLists.txt
src/maplab/algorithms/loopclosure/vocabulary-tree/cmake/: export_flags.cmake
src/maplab/aslam_cv2/aslam_cv_common/cmake/: export_flags.cmake
src/maplab/aslam_cv2/aslam_cv_matcher/: CMakeLists.txt
src/maplab/map-structure/localization-summary-map/: CMakeLists.txt
src/maplab/tools/maplab_test_data/: CMakeLists.txt  package.xml
src/maplab/tools/maplab_test_data/cmake/: maplab-import-test-maps.cmake.in  maplab-test-data.cmake.in
src/maplab_dependencies/internal/ethzasl_apriltag2/: CMakeLists.txt
src/maplab_dependencies/internal/ethzasl_brisk/agast/: CMakeLists.txt
src/maplab_dependencies/internal/ethzasl_brisk/brisk/: CMakeLists.txt
src/maplab_dependencies/internal/ethzasl_brisk/brisk/cmake/: export_flags.cmake
src/maplab_dependencies/internal/ethzasl_brisk/brisk/src/: brisk-feature-detector.cc  harris-score-calculator.cc
src/maplab_dependencies/internal/ethzasl_brisk/brisk_ros_demo/: CMakeLists.txt
src/maplab_dependencies/internal/hand_eye_calibration/hand_eye_calibration/: package.xml
src/maplab_dependencies/internal/kindr/doc/: doxygen.config
src/maplab_dependencies/internal/maplab_rovio/: CMakeLists.txt
(+11 files in other folders)
